# nix-gerrit

./: .gitignore  COPYING  README.md  default.nix  flake.nix  shell.nix  update.py
.forgejo/workflows/: build.yaml
.reuse/: dep5
buildBazelPackageNG/: default.nix
buildBazelPackageNG/bazelRulesJavaHook/: default.nix  setup-hook.sh
buildBazelPackageNG/bazelRulesJavaHook/local_java/: BUILD.bazel  WORKSPACE
buildBazelPackageNG/bazelRulesNodeJS5Hook/: default.nix  setup-hook.sh
buildBazelPackageNG/bazelRulesNodeJS5Hook/local_node/: BUILD  WORKSPACE
buildBazelPackageNG/bazelRulesNodeJS5Hook/local_yarn/: BUILD  WORKSPACE
gerrit/: 0001-Syntax-highlight-nix.patch  0003-Add-titles-to-CLs-over-HTTP.patch  3_10.nix  3_11.nix  3_12.nix  3_13.nix  bazelrc  bump-sshd-to-2_14_0.patch  common.nix  default.nix  gerrit-cl-431977-part-2-bump-bouncycastle.patch  jgit-parallel-object-counting.patch  versions.json  workspace_overrides.bzl
gerrit/patches/3_12/: 0001-Revert-Remove-net.i2p.crypto-eddsa.patch
gerrit/patches/3_13/: 0001-nuke-AI-features.patch  0003-Add-titles-to-CLs-over-HTTP_313.patch  0004-Drop-Playwright-Install.patch
gerrit/patches/common/: 0002-Syntax-highlight-rules.pl.patch
plugins/: builder.nix
plugins/autosubmitter/: default.nix
plugins/checks-jenkins/: default.nix
plugins/code-owners/: default.nix  using-usernames.patch
plugins/download-commands/: default.nix
plugins/events-log/: default.nix
plugins/metrics-reporter-prometheus/: default.nix
plugins/oauth/: default.nix
plugins/readonly/: default.nix
(+6 files in other folders)
